@@ -1,5 +1,5 @@
 /*
- * "$Id: ps-pdf.cxx,v 1.89.2.262 2004/10/21 19:43:15 mike Exp $"
+ * "$Id: ps-pdf.cxx,v 1.89.2.263 2004/10/24 22:32:32 mike Exp $"
  *
  *   PostScript + PDF output routines for HTMLDOC, a HTML document processing
  *   program.
@@ -364,6 +364,9 @@ static void	pdf_write_document(uchar *author, uchar *creator,
 static void	pdf_write_outpage(FILE *out, int outpage);
 static void	pdf_write_page(FILE *out, int page);
 static void	pdf_write_resources(FILE *out, int page);
+#ifdef DEBUG_TOC
+static void	pdf_text_contents(FILE *out, tree_t *toc, int indent = 0);
+#endif // DEBUG_TOC
 static void	pdf_write_contents(FILE *out, tree_t *toc, int parent,
 		                   int prev, int next, int *heading);
 static void	pdf_write_files(FILE *out, tree_t *doc);
@@ -2302,6 +2305,9 @@ pdf_write_document(uchar  *author,	// I - Author of document
     */
 
     heading = 0;
+#ifdef DEBUG_TOC
+    pdf_text_contents(out, toc);
+#endif // DEBUG_TOC
     pdf_write_contents(out, toc, 0, 0, 0, &heading);
   }
   else
@@ -2717,6 +2723,45 @@ pdf_write_page(FILE  *out,	/* I - Output file */
 }
 
 
+#ifdef DEBUG_TOC
+static void
+pdf_text_contents(FILE *out, tree_t *toc, int indent)
+{
+  static const char *spaces = "                                "
+                              "                                ";
+
+  if (indent > 16)
+    indent = 16;
+
+  while (toc)
+  {
+    fprintf(out, "%% %s<%s>", spaces + 64 - 4 * indent,
+            _htmlMarkups[toc->markup]);
+
+    switch (toc->markup)
+    {
+      case MARKUP_A :
+          tree_t *temp;
+
+          for (temp = toc->child; temp; temp = temp->next)
+	    fputs((char *)temp->data, out);
+          break;
+
+      default :
+          fputs("\n", out);
+	  pdf_text_contents(out, toc->child, indent + 1);
+	  fprintf(out, "%% %s", spaces + 64 - 4 * indent);
+          break;
+    }
+
+    fprintf(out, "</%s>\n", _htmlMarkups[toc->markup]);
+
+    toc = toc->next;
+  }
+}
+#endif // DEBUG_TOC
+
+
 /*
  * 'pdf_write_contents()' - Write the table of contents as outline records to
  *                          a PDF file.
@@ -2773,139 +2818,153 @@ pdf_write_contents(FILE   *out,			/* I - Output file */
       fprintf(out, "/Next %d 0 R", next);
 
     pdf_end_object(out);
+    return;
+  }
+
+ /*
+  * Allocate the arrays...  Add 1 to hold the TOC at the top level...
+  */
+
+  if ((entry_counts = (int *)calloc(sizeof(int), num_headings + 1)) == NULL)
+  {
+    progress_error(HD_ERROR_OUT_OF_MEMORY,
+                   "Unable to allocate memory for %d headings - %s",
+                   num_headings, strerror(errno));
+    return;
+  }
+
+  if ((entry_objects = (int *)calloc(sizeof(int), num_headings + 1)) == NULL)
+  {
+    progress_error(HD_ERROR_OUT_OF_MEMORY,
+                   "Unable to allocate memory for %d headings - %s",
+                   num_headings, strerror(errno));
+    free(entry_counts);
+    return;
+  }
+
+  if ((entries = (tree_t **)calloc(sizeof(tree_t *), num_headings + 1)) == NULL)
+  {
+    progress_error(HD_ERROR_OUT_OF_MEMORY,
+                   "Unable to allocate memory for %d headings - %s",
+                   num_headings, strerror(errno));
+    free(entry_objects);
+    free(entry_counts);
+    return;
+  }
+
+  if (parent == 0 && TocLevels > 0)
+  {
+   /*
+    * Add the table of contents to the top-level contents...
+    */
+
+    entries[0]       = NULL;
+    entry_objects[0] = num_objects + 2;
+    entry            = num_objects + 3;
+    count            = 1;
   }
   else
   {
-   /*
-    * Allocate the arrays...  Add 1 to hold the TOC at the top level...
-    */
-
-    if ((entry_counts = (int *)calloc(sizeof(int), num_headings + 1)) == NULL)
-    {
-      progress_error(HD_ERROR_OUT_OF_MEMORY,
-                     "Unable to allocate memory for %d headings - %s",
-                     num_headings, strerror(errno));
-      return;
-    }
-
-    if ((entry_objects = (int *)calloc(sizeof(int), num_headings + 1)) == NULL)
-    {
-      progress_error(HD_ERROR_OUT_OF_MEMORY,
-                     "Unable to allocate memory for %d headings - %s",
-                     num_headings, strerror(errno));
-      free(entry_counts);
-      return;
-    }
-
-    if ((entries = (tree_t **)calloc(sizeof(tree_t *), num_headings + 1)) == NULL)
-    {
-      progress_error(HD_ERROR_OUT_OF_MEMORY,
-                     "Unable to allocate memory for %d headings - %s",
-                     num_headings, strerror(errno));
-      free(entry_objects);
-      free(entry_counts);
-      return;
-    }
-
-   /*
-    * Find and count the children (entries)...
-    */
-
-    if (toc->markup == MARKUP_B || toc->markup == MARKUP_LI)
-    {
-      if (toc->next != NULL && toc->next->markup == MARKUP_UL)
-	temp = toc->next->child;
-      else
-	temp = NULL;
-    }
-    else
-      temp = toc->child;
-
-    if (parent == 0 && TocLevels > 0)
-    {
-     /*
-      * Add the table of contents to the top-level contents...
-      */
-
-      entries[0]       = NULL;
-      entry_objects[0] = num_objects + 2;
-      entry            = num_objects + 3;
-      count            = 1;
-    }
-    else
-    {
-      entry = num_objects + 2;
-      count = 0;
-    }
-
-    for (; temp != NULL && count <= num_headings; temp = temp->next)
-      if (temp->markup == MARKUP_B || temp->markup == MARKUP_LI)
-      {
-	entries[count]       = temp;
-	entry_objects[count] = entry;
-	if (temp->next != NULL && temp->next->markup == MARKUP_UL)
-          entry_counts[count] = pdf_count_headings(temp->next->child);
-	else
-          entry_counts[count] = 0;
-	entry += entry_counts[count] + 1;
-	count ++;
-      }
-
-   /*
-    * Output the top-level object...
-    */
-
-    thisobj = pdf_start_object(out);
-
-    if (parent == 0)
-      outline_object = thisobj;
-    else
-      fprintf(out, "/Parent %d 0 R", parent);
-
-    if (count > 0)
-    {
-      fprintf(out, "/Count %d", parent == 0 ? count : -count);
-      fprintf(out, "/First %d 0 R", entry_objects[0]);
-      fprintf(out, "/Last %d 0 R", entry_objects[count - 1]);
-    }
-
-    if (toc->markup == MARKUP_B || toc->markup == MARKUP_LI)
-    {
-      if ((text = htmlGetText(toc->child)) != NULL)
-      {
-	fputs("/Title", out);
-	write_string(out, text, 0);
-	free(text);
-      }
-
-      i = heading_pages[*heading];
-      x = 0.0f;
-      y = heading_tops[*heading] + pages[i].bottom;
-      pspdf_transform_coords(pages + i, x, y);
-
-      fprintf(out, "/Dest[%d 0 R/XYZ %.0f %.0f 0]",
-              pages_object + 2 * pages[i].outpage + 1, x, y);
-
-      (*heading) ++;
-    }
-
-    if (prev > 0)
-      fprintf(out, "/Prev %d 0 R", prev);
-
-    if (next > 0)
-      fprintf(out, "/Next %d 0 R", next);
-
-    pdf_end_object(out);
-
-    for (i = 0; i < count ; i ++)
-      pdf_write_contents(out, entries[i], thisobj, i > 0 ? entry_objects[i - 1] : 0,
-                	 i < (count - 1) ? entry_objects[i + 1] : 0,
-                	 heading);
-
-    free(entry_objects);
-    free(entry_counts);
-    free(entries);
+    entry = num_objects + 2;
+    count = 0;
   }
+
+ /*
+  * Find and count the children (entries)...
+  */
+
+  if (toc->markup == MARKUP_B && toc->next && toc->next->markup == MARKUP_UL)
+    temp = toc->next->child;
+  else if (toc->markup == MARKUP_LI && toc->last_child &&
+           toc->last_child->markup == MARKUP_UL)
+    temp = toc->last_child->child;
+  else
+    temp = toc->child;
+
+  for (; temp && count <= num_headings; temp = temp->next)
+  {
+    if (temp->markup == MARKUP_B)
+    {
+      entries[count]       = temp;
+      entry_objects[count] = entry;
+
+      if (temp->next && temp->next->markup == MARKUP_UL)
+        entry_counts[count] = pdf_count_headings(temp->next->child);
+      else
+        entry_counts[count] = 0;
+
+      entry += entry_counts[count] + 1;
+      count ++;
+    }
+    else if (temp->markup == MARKUP_LI)
+    {
+      entries[count]       = temp;
+      entry_objects[count] = entry;
+
+      if (temp->last_child && temp->last_child->markup == MARKUP_UL)
+        entry_counts[count] = pdf_count_headings(temp->last_child);
+      else
+        entry_counts[count] = 0;
+
+      entry += entry_counts[count] + 1;
+      count ++;
+    }
+  }
+
+ /*
+  * Output the top-level object...
+  */
+
+  thisobj = pdf_start_object(out);
+
+  if (parent == 0)
+    outline_object = thisobj;
+  else
+    fprintf(out, "/Parent %d 0 R", parent);
+
+  if (count > 0)
+  {
+    fprintf(out, "/Count %d", parent == 0 ? count : -count);
+    fprintf(out, "/First %d 0 R", entry_objects[0]);
+    fprintf(out, "/Last %d 0 R", entry_objects[count - 1]);
+  }
+
+  if (parent > 0 && toc->child && toc->child->markup == MARKUP_A)
+  {
+    if ((text = htmlGetText(toc->child->child)) != NULL)
+    {
+      fputs("/Title", out);
+      write_string(out, text, 0);
+      free(text);
+    }
+
+    i = heading_pages[*heading];
+    x = 0.0f;
+    y = heading_tops[*heading] + pages[i].bottom;
+    pspdf_transform_coords(pages + i, x, y);
+
+    fprintf(out, "/Dest[%d 0 R/XYZ %.0f %.0f 0]",
+            pages_object + 2 * pages[i].outpage + 1, x, y);
+
+    (*heading) ++;
+  }
+
+  if (prev > 0)
+    fprintf(out, "/Prev %d 0 R", prev);
+
+  if (next > 0)
+    fprintf(out, "/Next %d 0 R", next);
+
+  pdf_end_object(out);
+
+  for (i = 0; i < count ; i ++)
+    pdf_write_contents(out, entries[i], thisobj, i > 0 ? entry_objects[i - 1] : 0,
+                       i < (count - 1) ? entry_objects[i + 1] : 0,
+                       heading);
+
+  free(entry_objects);
+  free(entry_counts);
+  free(entries);
 }
 
 
@@ -3004,10 +3063,12 @@ pdf_count_headings(tree_t *toc)	/* I - TOC entry */
 
 
   for (headings = 0; toc != NULL; toc = toc->next)
-    if (toc->markup == MARKUP_B || toc->markup == MARKUP_LI)
+  {
+    if (toc->markup == MARKUP_A)
       headings ++;
-    else if (toc->markup == MARKUP_UL && toc->child != NULL)
+    if (toc->child != NULL)
       headings += pdf_count_headings(toc->child);
+  }
 
   return (headings);
 }
@@ -3510,7 +3571,7 @@ render_contents(tree_t *t,		/* I - Tree to parse */
   * Put the text...
   */
 
-  flat = flatten_tree(t->child);
+  flat = flatten_tree(t->child->child);
 
   for (height = 0.0, temp = flat; temp != NULL; temp = temp->next)
     if (temp->height > height)
@@ -3714,6 +3775,8 @@ count_headings(tree_t *t)		// I - Tree to count
       case MARKUP_B :
       case MARKUP_LI :
           count ++;
+	  if (t->last_child && t->last_child->markup == MARKUP_UL)
+	    count += count_headings(t->last_child);
 	  break;
 
       default :
@@ -3781,10 +3844,20 @@ parse_contents(tree_t *t,		/* I - Tree to parse */
 
 	    if (t->markup == MARKUP_B &&
 		pages[*page].chapter == pages[*page - 1].chapter)
-	      pages[*page].chapter = htmlGetText(t->child);
+	      pages[*page].chapter = htmlGetText(t->child->child);
 
 	    if (pages[*page].heading == pages[*page - 1].heading)
-	      pages[*page].heading = htmlGetText(t->child);
+	      pages[*page].heading = htmlGetText(t->child->child);
+
+           /*
+            * Next heading...
+            */
+
+            (*heading) ++;
+
+            if (t->last_child->markup == MARKUP_UL)
+              parse_contents(t->last_child, left, right, bottom, top, y,
+	                     page, heading, chap);
           }
 	  else if (t->next != NULL && t->next->markup == MARKUP_UL)
 	  {
@@ -3794,14 +3867,9 @@ parse_contents(tree_t *t,		/* I - Tree to parse */
 
 	    t = t->next;
 
-	    (*heading) += count_headings(t->child);
+	    (*heading) += count_headings(t->child) + 1;
 	  }
 
-         /*
-          * Next heading...
-          */
-
-          (*heading) ++;
           break;
 
       default :
@@ -12416,5 +12484,5 @@ flate_write(FILE  *out,			/* I - Output file */
 
 
 /*
- * End of "$Id: ps-pdf.cxx,v 1.89.2.262 2004/10/21 19:43:15 mike Exp $".
+ * End of "$Id: ps-pdf.cxx,v 1.89.2.263 2004/10/24 22:32:32 mike Exp $".
  */
